adding delaware page +svg assets

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@
   text-transform: uppercase!important;
   color: #fff!important;
   font-weight: 400!important;
+  display: flex !important;
 }
 
 .GDF-steps_counter_last_number {
@@ -367,63 +368,63 @@
 }
 
 .GDF-steps_modal_one {
-  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-one.png")!important;
+  background-image: url("/svg/01.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_two {
-  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-two.png")!important;
+  background-image: url("/svg/02.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_three {
-  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-three.png")!important;
+  background-image: url("/svg/03.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_four {
-  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-four.png")!important;
+  background-image: url("/svg/04.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_five {
-  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-five.png")!important;
+  background-image: url("/svg/05.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_six {
-  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-six.png")!important;
+  background-image: url("/svg/06.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_seven {
-  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-seven.png")!important;
+  background-image: url("/svg/07.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_eight {
-  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-eight.png")!important;
+  background-image: url("/svg/08.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_nine {
-  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-nine.png")!important;
+  background-image: url("/svg/09.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
@@ -437,7 +438,7 @@
 }
 
 .GDF-steps_modal_eleven {
-  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-eleven-1.png")!important;
+  background-image: url("/svg/11.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
