--- a/css/style-with-svg.css
+++ b/css/style-with-svg.css
@@ -368,77 +368,77 @@
 }
 
 .GDF-steps_modal_one {
-  background-image: url("/svg/01.svg")!important;
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-one.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_two {
-  background-image: url("/svg/02.svg")!important;
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-two.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_three {
-  background-image: url("/svg/03.svg")!important;
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-three.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_four {
-  background-image: url("/svg/04.svg")!important;
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-four.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_five {
-  background-image: url("/svg/05.svg")!important;
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-five.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_six {
-  background-image: url("/svg/06.svg")!important;
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-six.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_seven {
-  background-image: url("/svg/07.svg")!important;
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-seven.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_eight {
-  background-image: url("/svg/08.svg")!important;
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-eight.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_nine {
-  background-image: url("/svg/09.svg")!important;
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-nine.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_ten {
-  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-ten.png")!important;
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-ten.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
 }
 
 .GDF-steps_modal_eleven {
-  background-image: url("/svg/11.svg")!important;
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-eleven.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
