SCorp preparation with extra steps and step shifts

--- a/css/style-with-svg.css
+++ b/css/style-with-svg.css
@@ -416,8 +416,22 @@
   background-position: right 30px!important;
 }
 
+.GDF-steps_modal_seven_scorp {
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-seven-scorp.svg")!important;
+  background-repeat: no-repeat!important;
+  background-size: 222px 233px!important;
+  background-position: right 30px!important;
+}
+
 .GDF-steps_modal_eight {
   background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-eight.svg")!important;
+  background-repeat: no-repeat!important;
+  background-size: 222px 233px!important;
+  background-position: right 30px!important;
+}
+
+.GDF-steps_modal_eight_scorp {
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-eight-scorp.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
@@ -430,6 +444,13 @@
   background-position: right 30px!important;
 }
 
+.GDF-steps_modal_nine_scorp {
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-nine-scorp.svg")!important;
+  background-repeat: no-repeat!important;
+  background-size: 222px 233px!important;
+  background-position: right 30px!important;
+}
+
 .GDF-steps_modal_ten {
   background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-ten.svg")!important;
   background-repeat: no-repeat!important;
@@ -437,8 +458,30 @@
   background-position: right 30px!important;
 }
 
+.GDF-steps_modal_ten_scorp {
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-ten-scorp.svg")!important;
+  background-repeat: no-repeat!important;
+  background-size: 222px 233px!important;
+  background-position: right 30px!important;
+}
+
 .GDF-steps_modal_eleven {
   background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-eleven.svg")!important;
+  background-repeat: no-repeat!important;
+  background-size: 222px 233px!important;
+  background-position: right 30px!important;
+}
+
+.GDF-steps_modal_eleven_scorp {
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-eleven-scorp.svg")!important;
+  background-repeat: no-repeat!important;
+  background-size: 222px 233px!important;
+  background-position: right 30px!important;
+}
+
+
+.GDF-steps_modal_twelve {
+  background-image: url("/wp-content/uploads/GovDocFiling-State-Formation-twelve.svg")!important;
   background-repeat: no-repeat!important;
   background-size: 222px 233px!important;
   background-position: right 30px!important;
